bison.output
Terminals unused in grammar

   STR
   L_CURLY
   R_CURLY
   ELSE
   NOT_INDEXED


Grammar

    0 $accept: START $end

    1 $@1: %empty

    2 START: $@1 PROG
    3      | %empty

    4 PROG: COMMAND END
    5     | PROG COMMAND END
    6     | IFBLOCK
    7     | WHILEBLOCK
    8     | PROG IFBLOCK
    9     | PROG WHILEBLOCK
   10     | error

   11 COMMAND: EXPRESSION
   12        | DECLARATION
   13        | VARIABLE_ASSIGNMENT
   14        | READ_VARIABLE
   15        | PRINT_VARIABLE
   16        | VARIABLE_SWAP

   17 push: %empty

   18 pop: %empty

   19 openIf: IF L_BOX

   20 $@2: %empty

   21 continueIf: L_ANGLE $@2 PROG

   22 captureExpression: BOOLEXPRESSION R_BOX

   23 IFBLOCK: openIf captureExpression push continueIf R_ANGLE pop

   24 $@3: %empty

   25 $@4: %empty

   26 IFBLOCK: openIf captureExpression push continueIf L_ANGLE pop push R_ANGLE $@3 PROG $@4 R_ANGLE pop

   27 $@5: %empty

   28 $@6: %empty

   29 $@7: %empty

   30 WHILEBLOCK: WHILE $@5 L_BOX BOOLEXPRESSION $@6 R_BOX $@7 L_ANGLE push PROG pop R_ANGLE

   31 EQUALITY: EXPRESSION EQUAL EXPRESSION

   32 NOTEQUALITY: EXPRESSION NOT_EQUAL EXPRESSION

   33 SMALLER: EXPRESSION L_ANGLE EXPRESSION

   34 BIGGER: EXPRESSION R_ANGLE EXPRESSION

   35 BOOLEXPRESSION: EQUALITY
   36               | NOTEQUALITY
   37               | SMALLER
   38               | BIGGER
   39               | BOOLEXPRESSION OR BOOLEXPRESSION
   40               | BOOLEXPRESSION AND BOOLEXPRESSION
   41               | L_ROUND BOOLEXPRESSION R_ROUND
   42               | NOT L_ROUND BOOLEXPRESSION R_ROUND
   43               | error

   44 EXPRESSION: VARIABLE_EVAL
   45           | INTNUMBER
   46           | DOUBLENUMBER
   47           | EXPRESSION PLUS EXPRESSION
   48           | EXPRESSION MINUS EXPRESSION
   49           | EXPRESSION MULTIPLY EXPRESSION
   50           | EXPRESSION DIVIDE EXPRESSION
   51           | PLUS EXPRESSION
   52           | MINUS EXPRESSION
   53           | L_ROUND EXPRESSION R_ROUND

   54 VARIABLE_TYPE: INTEGER_TYPE
   55              | DOUBLE_TYPE

   56 INDEXING: PIPE EXPRESSION PIPE
   57         | %empty

   58 VARIABLE: INDEXING VARIABLE_ID

   59 VARIABLE_EVAL: VARIABLE
   60              | VARIABLE_TYPE TILDA VARIABLE

   61 ACCESS_MODIFIER: GLOBAL_MODIFIER
   62                | %empty

   63 DECLARATION: ACCESS_MODIFIER DOUBLECOMMA VARIABLE_ID DOUBLECOMMA VARIABLE_TYPE
   64            | ACCESS_MODIFIER DOUBLECOMMA VARIABLE_ID DOUBLECOMMA VARIABLE_TYPE DOUBLECOMMA EXPRESSION

   65 VARIABLE_SWAP: VARIABLE L_ANGLE MINUS R_ANGLE VARIABLE

   66 VARIABLE_ASSIGNMENT: VARIABLE ASSIGNMENT EXPRESSION

   67 READ_VARIABLE: READ VARIABLE_ID
   68              | READ VARIABLE_ID DOUBLECOMMA EXPRESSION

   69 PRINT_VARIABLE: PRINT VARIABLE_ID DOUBLECOMMA EXPRESSION MINUS R_ANGLE EXPRESSION
   70               | PRINT VARIABLE_ID DOUBLECOMMA EXPRESSION ASSIGNMENT R_ANGLE EXPRESSION
   71               | PRINT VARIABLE_ID


Terminals, with rules where they appear

$end (0) 0
error (256) 10 43
INTNUMBER (258) 45
DOUBLENUMBER (259) 46
STR (260)
PLUS (261) 47 51
MINUS (262) 48 52 65 69
MULTIPLY (263) 49
DIVIDE (264) 50
ASSIGNMENT (265) 66 70
L_BOX (266) 19 30
R_BOX (267) 22 30
L_ROUND (268) 41 42 53
R_ROUND (269) 41 42 53
L_CURLY (270)
R_CURLY (271)
L_ANGLE (272) 21 26 30 33 65
R_ANGLE (273) 23 26 30 34 65 69 70
EQUAL (274) 31
NOT_EQUAL (275) 32
AND (276) 40
OR (277) 39
NOT (278) 42
END (279) 4 5
READ (280) 67 68
PRINT (281) 69 70 71
IF (282) 19
ELSE (283)
WHILE (284) 30
INTEGER_TYPE (285) 54
DOUBLE_TYPE (286) 55
VARIABLE_ID (287) 58 63 64 67 68 69 70 71
GLOBAL_MODIFIER (288) 61
PIPE (289) 56
DOUBLECOMMA (290) 63 64 68 69 70
TILDA (291) 60
NOT_INDEXED (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
START (39)
    on left: 2 3, on right: 0
$@1 (40)
    on left: 1, on right: 2
PROG (41)
    on left: 4 5 6 7 8 9 10, on right: 2 5 8 9 21 26 30
COMMAND (42)
    on left: 11 12 13 14 15 16, on right: 4 5
push (43)
    on left: 17, on right: 23 26 30
pop (44)
    on left: 18, on right: 23 26 30
openIf (45)
    on left: 19, on right: 23 26
continueIf (46)
    on left: 21, on right: 23 26
$@2 (47)
    on left: 20, on right: 21
captureExpression (48)
    on left: 22, on right: 23 26
IFBLOCK (49)
    on left: 23 26, on right: 6 8
$@3 (50)
    on left: 24, on right: 26
$@4 (51)
    on left: 25, on right: 26
WHILEBLOCK (52)
    on left: 30, on right: 7 9
$@5 (53)
    on left: 27, on right: 30
$@6 (54)
    on left: 28, on right: 30
$@7 (55)
    on left: 29, on right: 30
EQUALITY (56)
    on left: 31, on right: 35
NOTEQUALITY (57)
    on left: 32, on right: 36
SMALLER (58)
    on left: 33, on right: 37
BIGGER (59)
    on left: 34, on right: 38
BOOLEXPRESSION (60)
    on left: 35 36 37 38 39 40 41 42 43, on right: 22 30 39 40 41 42
EXPRESSION (61)
    on left: 44 45 46 47 48 49 50 51 52 53, on right: 11 31 32 33 34
    47 48 49 50 51 52 53 56 64 66 68 69 70
VARIABLE_TYPE (62)
    on left: 54 55, on right: 60 63 64
INDEXING (63)
    on left: 56 57, on right: 58
VARIABLE (64)
    on left: 58, on right: 59 60 65 66
VARIABLE_EVAL (65)
    on left: 59 60, on right: 44
ACCESS_MODIFIER (66)
    on left: 61 62, on right: 63 64
DECLARATION (67)
    on left: 63 64, on right: 12
VARIABLE_SWAP (68)
    on left: 65, on right: 16
VARIABLE_ASSIGNMENT (69)
    on left: 66, on right: 13
READ_VARIABLE (70)
    on left: 67 68, on right: 14
PRINT_VARIABLE (71)
    on left: 69 70 71, on right: 15


State 0

    0 $accept: . START $end

    $end      reduce using rule 3 (START)
    $default  reduce using rule 1 ($@1)

    START  go to state 1
    $@1    go to state 2


State 1

    0 $accept: START . $end

    $end  shift, and go to state 3


State 2

    2 START: $@1 . PROG

    error            shift, and go to state 4
    INTNUMBER        shift, and go to state 5
    DOUBLENUMBER     shift, and go to state 6
    PLUS             shift, and go to state 7
    MINUS            shift, and go to state 8
    L_ROUND          shift, and go to state 9
    READ             shift, and go to state 10
    PRINT            shift, and go to state 11
    IF               shift, and go to state 12
    WHILE            shift, and go to state 13
    INTEGER_TYPE     shift, and go to state 14
    DOUBLE_TYPE      shift, and go to state 15
    GLOBAL_MODIFIER  shift, and go to state 16
    PIPE             shift, and go to state 17

    VARIABLE_ID  reduce using rule 57 (INDEXING)
    DOUBLECOMMA  reduce using rule 62 (ACCESS_MODIFIER)

    PROG                 go to state 18
    COMMAND              go to state 19
    openIf               go to state 20
    IFBLOCK              go to state 21
    WHILEBLOCK           go to state 22
    EXPRESSION           go to state 23
    VARIABLE_TYPE        go to state 24
    INDEXING             go to state 25
    VARIABLE             go to state 26
    VARIABLE_EVAL        go to state 27
    ACCESS_MODIFIER      go to state 28
    DECLARATION          go to state 29
    VARIABLE_SWAP        go to state 30
    VARIABLE_ASSIGNMENT  go to state 31
    READ_VARIABLE        go to state 32
    PRINT_VARIABLE       go to state 33


State 3

    0 $accept: START $end .

    $default  accept


State 4

   10 PROG: error .

    $default  reduce using rule 10 (PROG)


State 5

   45 EXPRESSION: INTNUMBER .

    $default  reduce using rule 45 (EXPRESSION)


State 6

   46 EXPRESSION: DOUBLENUMBER .

    $default  reduce using rule 46 (EXPRESSION)


State 7

   51 EXPRESSION: PLUS . EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 34
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 8

   52 EXPRESSION: MINUS . EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 36
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 9

   53 EXPRESSION: L_ROUND . EXPRESSION R_ROUND

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 37
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 10

   67 READ_VARIABLE: READ . VARIABLE_ID
   68              | READ . VARIABLE_ID DOUBLECOMMA EXPRESSION

    VARIABLE_ID  shift, and go to state 38


State 11

   69 PRINT_VARIABLE: PRINT . VARIABLE_ID DOUBLECOMMA EXPRESSION MINUS R_ANGLE EXPRESSION
   70               | PRINT . VARIABLE_ID DOUBLECOMMA EXPRESSION ASSIGNMENT R_ANGLE EXPRESSION
   71               | PRINT . VARIABLE_ID

    VARIABLE_ID  shift, and go to state 39


State 12

   19 openIf: IF . L_BOX

    L_BOX  shift, and go to state 40


State 13

   30 WHILEBLOCK: WHILE . $@5 L_BOX BOOLEXPRESSION $@6 R_BOX $@7 L_ANGLE push PROG pop R_ANGLE

    $default  reduce using rule 27 ($@5)

    $@5  go to state 41


State 14

   54 VARIABLE_TYPE: INTEGER_TYPE .

    $default  reduce using rule 54 (VARIABLE_TYPE)


State 15

   55 VARIABLE_TYPE: DOUBLE_TYPE .

    $default  reduce using rule 55 (VARIABLE_TYPE)


State 16

   61 ACCESS_MODIFIER: GLOBAL_MODIFIER .

    $default  reduce using rule 61 (ACCESS_MODIFIER)


State 17

   56 INDEXING: PIPE . EXPRESSION PIPE

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 42
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 18

    2 START: $@1 PROG .
    5 PROG: PROG . COMMAND END
    8     | PROG . IFBLOCK
    9     | PROG . WHILEBLOCK

    INTNUMBER        shift, and go to state 5
    DOUBLENUMBER     shift, and go to state 6
    PLUS             shift, and go to state 7
    MINUS            shift, and go to state 8
    L_ROUND          shift, and go to state 9
    READ             shift, and go to state 10
    PRINT            shift, and go to state 11
    IF               shift, and go to state 12
    WHILE            shift, and go to state 13
    INTEGER_TYPE     shift, and go to state 14
    DOUBLE_TYPE      shift, and go to state 15
    GLOBAL_MODIFIER  shift, and go to state 16
    PIPE             shift, and go to state 17

    VARIABLE_ID  reduce using rule 57 (INDEXING)
    DOUBLECOMMA  reduce using rule 62 (ACCESS_MODIFIER)
    $default     reduce using rule 2 (START)

    COMMAND              go to state 43
    openIf               go to state 20
    IFBLOCK              go to state 44
    WHILEBLOCK           go to state 45
    EXPRESSION           go to state 23
    VARIABLE_TYPE        go to state 24
    INDEXING             go to state 25
    VARIABLE             go to state 26
    VARIABLE_EVAL        go to state 27
    ACCESS_MODIFIER      go to state 28
    DECLARATION          go to state 29
    VARIABLE_SWAP        go to state 30
    VARIABLE_ASSIGNMENT  go to state 31
    READ_VARIABLE        go to state 32
    PRINT_VARIABLE       go to state 33


State 19

    4 PROG: COMMAND . END

    END  shift, and go to state 46


State 20

   23 IFBLOCK: openIf . captureExpression push continueIf R_ANGLE pop
   26        | openIf . captureExpression push continueIf L_ANGLE pop push R_ANGLE $@3 PROG $@4 R_ANGLE pop

    error         shift, and go to state 47
    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 48
    NOT           shift, and go to state 49
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    VARIABLE_ID  reduce using rule 57 (INDEXING)

    captureExpression  go to state 50
    EQUALITY           go to state 51
    NOTEQUALITY        go to state 52
    SMALLER            go to state 53
    BIGGER             go to state 54
    BOOLEXPRESSION     go to state 55
    EXPRESSION         go to state 56
    VARIABLE_TYPE      go to state 24
    INDEXING           go to state 25
    VARIABLE           go to state 35
    VARIABLE_EVAL      go to state 27


State 21

    6 PROG: IFBLOCK .

    $default  reduce using rule 6 (PROG)


State 22

    7 PROG: WHILEBLOCK .

    $default  reduce using rule 7 (PROG)


State 23

   11 COMMAND: EXPRESSION .
   47 EXPRESSION: EXPRESSION . PLUS EXPRESSION
   48           | EXPRESSION . MINUS EXPRESSION
   49           | EXPRESSION . MULTIPLY EXPRESSION
   50           | EXPRESSION . DIVIDE EXPRESSION

    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    MULTIPLY  shift, and go to state 59
    DIVIDE    shift, and go to state 60

    $default  reduce using rule 11 (COMMAND)


State 24

   60 VARIABLE_EVAL: VARIABLE_TYPE . TILDA VARIABLE

    TILDA  shift, and go to state 61


State 25

   58 VARIABLE: INDEXING . VARIABLE_ID

    VARIABLE_ID  shift, and go to state 62


State 26

   59 VARIABLE_EVAL: VARIABLE .
   65 VARIABLE_SWAP: VARIABLE . L_ANGLE MINUS R_ANGLE VARIABLE
   66 VARIABLE_ASSIGNMENT: VARIABLE . ASSIGNMENT EXPRESSION

    ASSIGNMENT  shift, and go to state 63
    L_ANGLE     shift, and go to state 64

    $default  reduce using rule 59 (VARIABLE_EVAL)


State 27

   44 EXPRESSION: VARIABLE_EVAL .

    $default  reduce using rule 44 (EXPRESSION)


State 28

   63 DECLARATION: ACCESS_MODIFIER . DOUBLECOMMA VARIABLE_ID DOUBLECOMMA VARIABLE_TYPE
   64            | ACCESS_MODIFIER . DOUBLECOMMA VARIABLE_ID DOUBLECOMMA VARIABLE_TYPE DOUBLECOMMA EXPRESSION

    DOUBLECOMMA  shift, and go to state 65


State 29

   12 COMMAND: DECLARATION .

    $default  reduce using rule 12 (COMMAND)


State 30

   16 COMMAND: VARIABLE_SWAP .

    $default  reduce using rule 16 (COMMAND)


State 31

   13 COMMAND: VARIABLE_ASSIGNMENT .

    $default  reduce using rule 13 (COMMAND)


State 32

   14 COMMAND: READ_VARIABLE .

    $default  reduce using rule 14 (COMMAND)


State 33

   15 COMMAND: PRINT_VARIABLE .

    $default  reduce using rule 15 (COMMAND)


State 34

   47 EXPRESSION: EXPRESSION . PLUS EXPRESSION
   48           | EXPRESSION . MINUS EXPRESSION
   49           | EXPRESSION . MULTIPLY EXPRESSION
   50           | EXPRESSION . DIVIDE EXPRESSION
   51           | PLUS EXPRESSION .

    MULTIPLY  shift, and go to state 59
    DIVIDE    shift, and go to state 60

    $default  reduce using rule 51 (EXPRESSION)


State 35

   59 VARIABLE_EVAL: VARIABLE .

    $default  reduce using rule 59 (VARIABLE_EVAL)


State 36

   47 EXPRESSION: EXPRESSION . PLUS EXPRESSION
   48           | EXPRESSION . MINUS EXPRESSION
   49           | EXPRESSION . MULTIPLY EXPRESSION
   50           | EXPRESSION . DIVIDE EXPRESSION
   52           | MINUS EXPRESSION .

    MULTIPLY  shift, and go to state 59
    DIVIDE    shift, and go to state 60

    $default  reduce using rule 52 (EXPRESSION)


State 37

   47 EXPRESSION: EXPRESSION . PLUS EXPRESSION
   48           | EXPRESSION . MINUS EXPRESSION
   49           | EXPRESSION . MULTIPLY EXPRESSION
   50           | EXPRESSION . DIVIDE EXPRESSION
   53           | L_ROUND EXPRESSION . R_ROUND

    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    MULTIPLY  shift, and go to state 59
    DIVIDE    shift, and go to state 60
    R_ROUND   shift, and go to state 66


State 38

   67 READ_VARIABLE: READ VARIABLE_ID .
   68              | READ VARIABLE_ID . DOUBLECOMMA EXPRESSION

    DOUBLECOMMA  shift, and go to state 67

    $default  reduce using rule 67 (READ_VARIABLE)


State 39

   69 PRINT_VARIABLE: PRINT VARIABLE_ID . DOUBLECOMMA EXPRESSION MINUS R_ANGLE EXPRESSION
   70               | PRINT VARIABLE_ID . DOUBLECOMMA EXPRESSION ASSIGNMENT R_ANGLE EXPRESSION
   71               | PRINT VARIABLE_ID .

    DOUBLECOMMA  shift, and go to state 68

    $default  reduce using rule 71 (PRINT_VARIABLE)


State 40

   19 openIf: IF L_BOX .

    $default  reduce using rule 19 (openIf)


State 41

   30 WHILEBLOCK: WHILE $@5 . L_BOX BOOLEXPRESSION $@6 R_BOX $@7 L_ANGLE push PROG pop R_ANGLE

    L_BOX  shift, and go to state 69


State 42

   47 EXPRESSION: EXPRESSION . PLUS EXPRESSION
   48           | EXPRESSION . MINUS EXPRESSION
   49           | EXPRESSION . MULTIPLY EXPRESSION
   50           | EXPRESSION . DIVIDE EXPRESSION
   56 INDEXING: PIPE EXPRESSION . PIPE

    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    MULTIPLY  shift, and go to state 59
    DIVIDE    shift, and go to state 60
    PIPE      shift, and go to state 70


State 43

    5 PROG: PROG COMMAND . END

    END  shift, and go to state 71


State 44

    8 PROG: PROG IFBLOCK .

    $default  reduce using rule 8 (PROG)


State 45

    9 PROG: PROG WHILEBLOCK .

    $default  reduce using rule 9 (PROG)


State 46

    4 PROG: COMMAND END .

    $default  reduce using rule 4 (PROG)


State 47

   43 BOOLEXPRESSION: error .

    $default  reduce using rule 43 (BOOLEXPRESSION)


State 48

   41 BOOLEXPRESSION: L_ROUND . BOOLEXPRESSION R_ROUND
   53 EXPRESSION: L_ROUND . EXPRESSION R_ROUND

    error         shift, and go to state 47
    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 48
    NOT           shift, and go to state 49
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    VARIABLE_ID  reduce using rule 57 (INDEXING)

    EQUALITY        go to state 51
    NOTEQUALITY     go to state 52
    SMALLER         go to state 53
    BIGGER          go to state 54
    BOOLEXPRESSION  go to state 72
    EXPRESSION      go to state 73
    VARIABLE_TYPE   go to state 24
    INDEXING        go to state 25
    VARIABLE        go to state 35
    VARIABLE_EVAL   go to state 27


State 49

   42 BOOLEXPRESSION: NOT . L_ROUND BOOLEXPRESSION R_ROUND

    L_ROUND  shift, and go to state 74


State 50

   23 IFBLOCK: openIf captureExpression . push continueIf R_ANGLE pop
   26        | openIf captureExpression . push continueIf L_ANGLE pop push R_ANGLE $@3 PROG $@4 R_ANGLE pop

    $default  reduce using rule 17 (push)

    push  go to state 75


State 51

   35 BOOLEXPRESSION: EQUALITY .

    $default  reduce using rule 35 (BOOLEXPRESSION)


State 52

   36 BOOLEXPRESSION: NOTEQUALITY .

    $default  reduce using rule 36 (BOOLEXPRESSION)


State 53

   37 BOOLEXPRESSION: SMALLER .

    $default  reduce using rule 37 (BOOLEXPRESSION)


State 54

   38 BOOLEXPRESSION: BIGGER .

    $default  reduce using rule 38 (BOOLEXPRESSION)


State 55

   22 captureExpression: BOOLEXPRESSION . R_BOX
   39 BOOLEXPRESSION: BOOLEXPRESSION . OR BOOLEXPRESSION
   40               | BOOLEXPRESSION . AND BOOLEXPRESSION

    R_BOX  shift, and go to state 76
    AND    shift, and go to state 77
    OR     shift, and go to state 78


State 56

   31 EQUALITY: EXPRESSION . EQUAL EXPRESSION
   32 NOTEQUALITY: EXPRESSION . NOT_EQUAL EXPRESSION
   33 SMALLER: EXPRESSION . L_ANGLE EXPRESSION
   34 BIGGER: EXPRESSION . R_ANGLE EXPRESSION
   47 EXPRESSION: EXPRESSION . PLUS EXPRESSION
   48           | EXPRESSION . MINUS EXPRESSION
   49           | EXPRESSION . MULTIPLY EXPRESSION
   50           | EXPRESSION . DIVIDE EXPRESSION

    PLUS       shift, and go to state 57
    MINUS      shift, and go to state 58
    MULTIPLY   shift, and go to state 59
    DIVIDE     shift, and go to state 60
    L_ANGLE    shift, and go to state 79
    R_ANGLE    shift, and go to state 80
    EQUAL      shift, and go to state 81
    NOT_EQUAL  shift, and go to state 82


State 57

   47 EXPRESSION: EXPRESSION PLUS . EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 83
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 58

   48 EXPRESSION: EXPRESSION MINUS . EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 84
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 59

   49 EXPRESSION: EXPRESSION MULTIPLY . EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 85
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 60

   50 EXPRESSION: EXPRESSION DIVIDE . EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 86
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 61

   60 VARIABLE_EVAL: VARIABLE_TYPE TILDA . VARIABLE

    PIPE  shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    INDEXING  go to state 25
    VARIABLE  go to state 87


State 62

   58 VARIABLE: INDEXING VARIABLE_ID .

    $default  reduce using rule 58 (VARIABLE)


State 63

   66 VARIABLE_ASSIGNMENT: VARIABLE ASSIGNMENT . EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 88
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 64

   65 VARIABLE_SWAP: VARIABLE L_ANGLE . MINUS R_ANGLE VARIABLE

    MINUS  shift, and go to state 89


State 65

   63 DECLARATION: ACCESS_MODIFIER DOUBLECOMMA . VARIABLE_ID DOUBLECOMMA VARIABLE_TYPE
   64            | ACCESS_MODIFIER DOUBLECOMMA . VARIABLE_ID DOUBLECOMMA VARIABLE_TYPE DOUBLECOMMA EXPRESSION

    VARIABLE_ID  shift, and go to state 90


State 66

   53 EXPRESSION: L_ROUND EXPRESSION R_ROUND .

    $default  reduce using rule 53 (EXPRESSION)


State 67

   68 READ_VARIABLE: READ VARIABLE_ID DOUBLECOMMA . EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 91
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 68

   69 PRINT_VARIABLE: PRINT VARIABLE_ID DOUBLECOMMA . EXPRESSION MINUS R_ANGLE EXPRESSION
   70               | PRINT VARIABLE_ID DOUBLECOMMA . EXPRESSION ASSIGNMENT R_ANGLE EXPRESSION

    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 9
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    $default  reduce using rule 57 (INDEXING)

    EXPRESSION     go to state 92
    VARIABLE_TYPE  go to state 24
    INDEXING       go to state 25
    VARIABLE       go to state 35
    VARIABLE_EVAL  go to state 27


State 69

   30 WHILEBLOCK: WHILE $@5 L_BOX . BOOLEXPRESSION $@6 R_BOX $@7 L_ANGLE push PROG pop R_ANGLE

    error         shift, and go to state 47
    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 48
    NOT           shift, and go to state 49
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17

    VARIABLE_ID  reduce using rule 57 (INDEXING)

    EQUALITY        go to state 51
    NOTEQUALITY     go to state 52
    SMALLER         go to state 53
    BIGGER          go to state 54
    BOOLEXPRESSION  go to state 93
    EXPRESSION      go to state 56
    VARIABLE_TYPE   go to state 24
    INDEXING        go to state 25
    VARIABLE        go to state 35
    VARIABLE_EVAL   go to state 27


State 70

   56 INDEXING: PIPE EXPRESSION PIPE .

    $default  reduce using rule 56 (INDEXING)


State 71

    5 PROG: PROG COMMAND END .

    $default  reduce using rule 5 (PROG)


State 72

   39 BOOLEXPRESSION: BOOLEXPRESSION . OR BOOLEXPRESSION
   40               | BOOLEXPRESSION . AND BOOLEXPRESSION
   41               | L_ROUND BOOLEXPRESSION . R_ROUND

    R_ROUND  shift, and go to state 94
    AND      shift, and go to state 77
    OR       shift, and go to state 78


State 73

   31 EQUALITY: EXPRESSION . EQUAL EXPRESSION
   32 NOTEQUALITY: EXPRESSION . NOT_EQUAL EXPRESSION
   33 SMALLER: EXPRESSION . L_ANGLE EXPRESSION
   34 BIGGER: EXPRESSION . R_ANGLE EXPRESSION
   47 EXPRESSION: EXPRESSION . PLUS EXPRESSION
   48           | EXPRESSION . MINUS EXPRESSION
   49           | EXPRESSION . MULTIPLY EXPRESSION
   50           | EXPRESSION . DIVIDE EXPRESSION
   53           | L_ROUND EXPRESSION . R_ROUND

    PLUS       shift, and go to state 57
    MINUS      shift, and go to state 58
    MULTIPLY   shift, and go to state 59
    DIVIDE     shift, and go to state 60
    R_ROUND    shift, and go to state 66
    L_ANGLE    shift, and go to state 79
    R_ANGLE    shift, and go to state 80
    EQUAL      shift, and go to state 81
    NOT_EQUAL  shift, and go to state 82


State 74

   42 BOOLEXPRESSION: NOT L_ROUND . BOOLEXPRESSION R_ROUND

    error         shift, and go to state 47
    INTNUMBER     shift, and go to state 5
    DOUBLENUMBER  shift, and go to state 6
    PLUS          shift, and go to state 7
    MINUS         shift, and go to state 8
    L_ROUND       shift, and go to state 48
    NOT           shift, and go to state 49
    INTEGER_TYPE  shift, and go to state 14
    DOUBLE_TYPE   shift, and go to state 15
    PIPE          shift, and go to state 17
